--- a/Buharov_lab/Buharov_lab.csproj
+++ b/Buharov_lab/Buharov_lab.csproj
@@ -54,8 +54,11 @@
     <Compile Include="FormBulldozer.Designer.cs">
       <DependentUpon>FormBulldozer.cs</DependentUpon>
     </Compile>
+    <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tractor.cs" />
+    <Compile Include="Vehicle.cs" />
     <EmbeddedResource Include="FormBulldozer.resx">
       <DependentUpon>FormBulldozer.cs</DependentUpon>
     </EmbeddedResource>
