--- a/Buharov_lab/Buharov_lab.csproj
+++ b/Buharov_lab/Buharov_lab.csproj
@@ -48,19 +48,20 @@
   <ItemGroup>
     <Compile Include="Bulldozer.cs" />
     <Compile Include="Direction.cs" />
-    <Compile Include="FormBulldozer.cs">
+    <Compile Include="FormParking.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormBulldozer.Designer.cs">
-      <DependentUpon>FormBulldozer.cs</DependentUpon>
+    <Compile Include="FormParking.Designer.cs">
+      <DependentUpon>FormParking.cs</DependentUpon>
     </Compile>
     <Compile Include="ITransport.cs" />
+    <Compile Include="Parking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tractor.cs" />
     <Compile Include="Vehicle.cs" />
-    <EmbeddedResource Include="FormBulldozer.resx">
-      <DependentUpon>FormBulldozer.cs</DependentUpon>
+    <EmbeddedResource Include="FormParking.resx">
+      <DependentUpon>FormParking.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
