--- a/Buharov_lab/Buharov_lab.csproj
+++ b/Buharov_lab/Buharov_lab.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Track.cs" />
     <EmbeddedResource Include="FormBulldozer.resx">
       <DependentUpon>FormBulldozer.cs</DependentUpon>
     </EmbeddedResource>
