--- a/Buharov_lab/Buharov_lab.csproj
+++ b/Buharov_lab/Buharov_lab.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Bulldozer.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="FormCarConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCarConfig.Designer.cs">
+      <DependentUpon>FormCarConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormParking.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tractor.cs" />
     <Compile Include="Vehicle.cs" />
+    <EmbeddedResource Include="FormCarConfig.resx">
+      <DependentUpon>FormCarConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormParking.resx">
       <DependentUpon>FormParking.cs</DependentUpon>
     </EmbeddedResource>
