--- a/Buharov_lab/Buharov_lab.csproj
+++ b/Buharov_lab/Buharov_lab.csproj
@@ -48,11 +48,11 @@
   <ItemGroup>
     <Compile Include="Bulldozer.cs" />
     <Compile Include="Direction.cs" />
-    <Compile Include="FormCarConfig.cs">
+    <Compile Include="FormVehicleConfig.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCarConfig.Designer.cs">
-      <DependentUpon>FormCarConfig.cs</DependentUpon>
+    <Compile Include="FormVehicleConfig.Designer.cs">
+      <DependentUpon>FormVehicleConfig.cs</DependentUpon>
     </Compile>
     <Compile Include="FormParking.cs">
       <SubType>Form</SubType>
@@ -67,8 +67,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tractor.cs" />
     <Compile Include="Vehicle.cs" />
-    <EmbeddedResource Include="FormCarConfig.resx">
-      <DependentUpon>FormCarConfig.cs</DependentUpon>
+    <EmbeddedResource Include="FormVehicleConfig.resx">
+      <DependentUpon>FormVehicleConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormParking.resx">
       <DependentUpon>FormParking.cs</DependentUpon>
