--- a/Buharov_lab/Buharov_lab.csproj
+++ b/Buharov_lab/Buharov_lab.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ITransport.cs" />
     <Compile Include="MultiLevelParking.cs" />
     <Compile Include="Parking.cs" />
+    <Compile Include="ParkingAlreadyHaveException.cs" />
     <Compile Include="ParkingOverflowException.cs" />
     <Compile Include="ParkingOccupiedPlaceException.cs" />
     <Compile Include="ParkingNotFoundException.cs" />
